--- a/index.html
+++ b/index.html
@@ -41,7 +41,49 @@
         </div>
       </div>
     </header>
+    <section class="main">
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12">
+            <h1 class="main__title">Web development project</h1>
+            <p class="main__text">Very suitable to support all web development projects</p>
+            <button class="button button_empty">OUR SERVICES</button>
+            <button class="button button_full">HIRE IS NOW</button>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section class="about">
+      <div class="container ">
+        <div class="row justify-content-center">
+          <div class="col-xl-8">
+            <h2 class="about__title">About Us</h2>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-around">
+          <div class="col-xl-3">
+            <img src="/img/about1.png" alt="" />
+            <h3>Awesome Icons</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+          </div>
+          <div class="col-xl-3">
+            <img src="/img/about2.png" alt="" />
+            <h3>One Page</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+          </div>
+          <div class="col-xl-3">
+            <img src="/img/about3.png" alt="" />
+            <h3>Fully Responsive</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
