--- a/index.html
+++ b/index.html
@@ -68,18 +68,24 @@
         <div class="row justify-content-around">
           <div class="col-xl-3">
             <img src="/img/about1.png" alt="" />
-            <h3>Awesome Icons</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+            <h3 class="about_h3">Awesome Icons</h3>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            </p>
           </div>
           <div class="col-xl-3">
             <img src="/img/about2.png" alt="" />
-            <h3>One Page</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+            <h3 class="about_h3">One Page</h3>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            </p>
           </div>
           <div class="col-xl-3">
             <img src="/img/about3.png" alt="" />
-            <h3>Fully Responsive</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
+            <h3 class="about_h3">Fully Responsive</h3>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+            </p>
           </div>
         </div>
       </div>
