add section servicies

--- a/index.html
+++ b/index.html
@@ -90,6 +90,83 @@
         </div>
       </div>
     </section>
+    <section class="services">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-8">
+            <h2 class="about__title">Our Services</h2>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-xl-4">
+            <div class="card">
+              <i class="fa fa-mobile card__icon"></i>
+              <h3 class="about_h3">Fully Responsive</h3>
+              <p class="about__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              </p>
+              <button class="card__btn">read more</button>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <div class="card">
+              <i class="fa fa-mobile card__icon"></i>
+              <h3 class="about_h3">Fully Responsive</h3>
+              <p class="about__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              </p>
+              <button class="card__btn">read more</button>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <div class="card">
+              <i class="fa fa-mobile card__icon"></i>
+              <h3 class="about_h3">Fully Responsive</h3>
+              <p class="about__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              </p>
+              <button class="card__btn">read more</button>
+            </div>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-xl-4">
+            <div class="card">
+              <i class="fa fa-mobile card__icon"></i>
+              <h3 class="about_h3">Fully Responsive</h3>
+              <p class="about__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              </p>
+              <button class="card__btn">read more</button>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <div class="card">
+              <i class="fa fa-mobile card__icon"></i>
+              <h3 class="about_h3">Fully Responsive</h3>
+              <p class="about__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              </p>
+              <button class="card__btn">read more</button>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <div class="card">
+              <i class="fa fa-mobile card__icon"></i>
+              <h3 class="about_h3">Fully Responsive</h3>
+              <p class="about__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              </p>
+              <button class="card__btn">read more</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
