add section pricing

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           <div class="col-xl-12">
             <h1 class="main__title">Web development project</h1>
             <p class="main__text">Very suitable to support all web development projects</p>
-            <button class="button button_empty">OUR SERVICES</button>
-            <button class="button button_full">HIRE IS NOW</button>
+            <button class="button">OUR SERVICES</button>
+            <button class="button">HIRE IS NOW</button>
           </div>
         </div>
       </div>
@@ -104,8 +104,8 @@
         <div class="row justify-content-center">
           <div class="col-xl-4">
             <div class="card">
-              <i class="fa fa-mobile card__icon"></i>
-              <h3 class="about_h3">Fully Responsive</h3>
+              <i class="fa fa-briefcase card__icon"></i>
+              <h3 class="about_h3">Portfolio</h3>
               <p class="about__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
               </p>
@@ -114,8 +114,8 @@
           </div>
           <div class="col-xl-4">
             <div class="card">
-              <i class="fa fa-mobile card__icon"></i>
-              <h3 class="about_h3">Fully Responsive</h3>
+              <i class="fa fa-refresh card__icon"></i>
+              <h3 class="about_h3">Research</h3>
               <p class="about__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
               </p>
@@ -124,8 +124,8 @@
           </div>
           <div class="col-xl-4">
             <div class="card">
-              <i class="fa fa-mobile card__icon"></i>
-              <h3 class="about_h3">Fully Responsive</h3>
+              <i class="fa fa-support card__icon"></i>
+              <h3 class="about_h3">Support</h3>
               <p class="about__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
               </p>
@@ -136,8 +136,8 @@
         <div class="row justify-content-center">
           <div class="col-xl-4">
             <div class="card">
-              <i class="fa fa-mobile card__icon"></i>
-              <h3 class="about_h3">Fully Responsive</h3>
+              <i class="fa fa-product-hunt card__icon"></i>
+              <h3 class="about_h3">Documentation</h3>
               <p class="about__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
               </p>
@@ -146,8 +146,8 @@
           </div>
           <div class="col-xl-4">
             <div class="card">
-              <i class="fa fa-mobile card__icon"></i>
-              <h3 class="about_h3">Fully Responsive</h3>
+              <i class="fa fa-connectdevelop card__icon"></i>
+              <h3 class="about_h3">Development</h3>
               <p class="about__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
               </p>
@@ -156,8 +156,8 @@
           </div>
           <div class="col-xl-4">
             <div class="card">
-              <i class="fa fa-mobile card__icon"></i>
-              <h3 class="about_h3">Fully Responsive</h3>
+              <i class="fa fa-desktop card__icon"></i>
+              <h3 class="about_h3">Design</h3>
               <p class="about__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
               </p>
@@ -167,6 +167,150 @@
         </div>
       </div>
     </section>
+
+    <section class="portfolio">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-8">
+            <h2 class="about__title">Latest Works</h2>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+            <button val="on" class="button" filter="all">ALL</button>
+            <button val="off" class="button" filter="wd">WEB DESIGN</button>
+            <button val="off" class="button" filter="ud">UI/UX DESIGN</button>
+            <button val="off" class="button" filter="moc">MOCKUPS</button>
+          </div>
+        </div>
+        <div class="row filter">
+          <div filter="wd" class="col-xl-4">
+            <img src="img/item1.png" alt="" />
+            <div class="text">
+              <h5>Hand Watch</h5>
+              <p>Web design</p>
+            </div>
+          </div>
+          <div filter="moc" class="col-xl-4">
+            <img src="img/item2.png" alt="" />
+            <div class="text">
+              <h5>One Day Pass</h5>
+              <p>Mockups</p>
+            </div>
+          </div>
+          <div filter="wd" class="col-xl-4">
+            <img src="img/item3.png" alt="" />
+            <div class="text">
+              <h5>Modal T-shirt</h5>
+              <p>Web design</p>
+            </div>
+          </div>
+          <div filter="moc" class="col-xl-4">
+            <img src="img/item4.png" alt="" />
+            <div class="text">
+              <h5>Flask</h5>
+              <p>Mockups</p>
+            </div>
+          </div>
+          <div filter="ud" class="col-xl-4">
+            <img src="img/item5.png" alt="" />
+            <div class="text">
+              <h5>Eplemost</h5>
+              <p>Ui/Ux Design</p>
+            </div>
+          </div>
+          <div filter="ud" class="col-xl-4">
+            <img src="img/item6.png" alt="" />
+            <div class="text">
+              <h5>The kitchens</h5>
+              <p>Ui/Ux Design</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-12">
+            <button val="on" filter="all" class="button">View all</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="pricing">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-8">
+            <h2 class="about__title">Pricing Plan</h2>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-4">
+            <div class="price">
+              <div class="price__head">
+                <p>Free Trial</p>
+
+                <sup>$</sup> 00<sub> per mount</sub>
+              </div>
+              <div class="price__body">
+                <ul>
+                  <li>30 Free Trail</li>
+                  <li>5 Free Projects</li>
+                  <li>PHP 5 Enabled</li>
+                  <li>24/7 Suports</li>
+                </ul>
+              </div>
+              <div class="price__footer">
+                <button>Order Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <div class="price">
+              <div class="price__head">
+                <p>Basic</p>
+
+                <sup>$</sup> 50<sub> per mount</sub>
+              </div>
+              <div class="price__body">
+                <ul>
+                  <li>30 Free Trail</li>
+                  <li>5 Free Projects</li>
+                  <li>PHP 5 Enabled</li>
+                  <li>24/7 Suports</li>
+                </ul>
+              </div>
+              <div class="price__footer">
+                <button>Order Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <div class="price">
+              <div class="price__head">
+                <p>Ultimates</p>
+
+                <sup>$</sup> 99<sub> per mount</sub>
+              </div>
+              <div class="price__body">
+                <ul>
+                  <li>30 Free Trail</li>
+                  <li>5 Free Projects</li>
+                  <li>PHP 5 Enabled</li>
+                  <li>24/7 Suports</li>
+                </ul>
+              </div>
+              <div class="price__footer">
+                <button>Order Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -182,5 +326,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
