add team section with slick slider

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -310,6 +315,176 @@
         </div>
       </div>
     </section>
+    <section class="team">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-8">
+            <h2 class="about__title">Our Team Member</h2>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-center multiple-items">
+          <div class="col-xl-4">
+            <img src="img/team1.png" alt="" />
+            <h4>John Doe</h4>
+            <p>General Manager</p>
+            <div class="icons">
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-vk fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-telegram fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <img src="img/team2.png" alt="" />
+            <h4>Alexa Biru</h4>
+            <p>Office Director</p>
+            <div class="icons">
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-vk fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-telegram fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <img src="img/team3.png" alt="" />
+            <h4>Ronobir sing</h4>
+            <p>Manager</p>
+            <div class="icons">
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-vk fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-telegram fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <img src="img/team2.png" alt="" />
+            <h4>Doe John</h4>
+            <p>Admin</p>
+            <div class="icons">
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-vk fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-telegram fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </div>
+          </div>
+          <div class="col-xl-4">
+            <img src="img/team3.png" alt="" />
+            <h4>Alexa Biru</h4>
+            <p>Manager</p>
+            <div class="icons">
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-vk fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+              <a href="">
+                <span class="fa-stack fa-2x">
+                  <i class="fa fa-square fa-stack-2x"></i>
+                  <i class="fa fa-telegram fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -320,6 +495,10 @@
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
       crossorigin="anonymous"
+    ></script>
+    <script
+      type="text/javascript"
+      src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
