--- a/index.html
+++ b/index.html
@@ -485,6 +485,81 @@
         </div>
       </div>
     </section>
+    <section class="blog">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-8">
+            <h2 class="about__title">Blog</h2>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+          </div>
+        </div>
+        <div class="row left">
+          <div class="col-xl-6">
+            <img src="img/blog1.png" alt="" />
+          </div>
+          <div class="col-xl-6">
+            <div class="blog__item">
+              <a href="">SEO Quis Vestibulum</a>
+              <div>
+                <span> <i class="fa fa-calendar"></i> 14.07.2020</span>
+                <span> <i class="fa fa-file"></i> Development</span>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ab asperiores,
+                  quas accusantium corrupti suscipit veniam officiis ex illo rerum expedita omnis
+                  porro ipsam nam similique sit ipsum cupiditate consectetur!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row right">
+          <div class="col-xl-6">
+            <img src="img/blog2.png" alt="" />
+          </div>
+          <div class="col-xl-6">
+            <div class="blog__item">
+              <a href="">SEO Quis Vestibulum</a>
+              <div>
+                <span> <i class="fa fa-calendar"></i> 14.07.2020</span>
+                <span> <i class="fa fa-file"></i> Development</span>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ab asperiores,
+                  quas accusantium corrupti suscipit veniam officiis ex illo rerum expedita omnis
+                  porro ipsam nam similique sit ipsum cupiditate consectetur!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row left">
+          <div class="col-xl-6">
+            <img src="img/blog3.png" alt="" />
+          </div>
+          <div class="col-xl-6">
+            <div class="blog__item">
+              <a href="">SEO Quis Vestibulum</a>
+              <div>
+                <span> <i class="fa fa-calendar"></i> 14.07.2020</span>
+                <span> <i class="fa fa-file"></i> Development</span>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus ab asperiores,
+                  quas accusantium corrupti suscipit veniam officiis ex illo rerum expedita omnis
+                  porro ipsam nam similique sit ipsum cupiditate consectetur!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xl-12">
+            <button class="button button_blog">More View</button>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
