add contact form and footer

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
@@ -560,6 +564,55 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-xl-8">
+            <h2 class="about__title">Contact Us</h2>
+            <p class="about__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+              incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            </p>
+          </div>
+        </div>
+        <div class="row justify-content-around">
+          <div class="col-xl-3">
+            <div class="circle">
+              <i class="fa fa-map-marker"></i>
+            </div>
+            <p>Nobinagar savar,Dhaka Bangladesh</p>
+          </div>
+          <div class="col-xl-3">
+            <div class="circle">
+              <i class="fa fa-phone"></i>
+            </div>
+            <p>+8801743331996 +8801928737807</p>
+          </div>
+          <div class="col-xl-3">
+            <div class="circle">
+              <i class="fa fa-envelope"></i>
+            </div>
+            <p>quickmasud@gmail.com quickmasud@yahoo.com</p>
+          </div>
+        </div>
+        <div class="row justify-content-center form">
+          <div class="col-xl-5">
+            <input type="text" placeholder="Your Name" />
+          </div>
+          <div class="col-xl-5">
+            <input type="email" placeholder="Your Email" />
+          </div>
+          <div class="col-xl-10">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Write Message"></textarea>
+          </div>
+          <div class="col-xl-2 offset-xl-7"><button>Send</button></div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xl-12"><div class="footer__rules">All rights Reserved © 2020</div></div>
+      </div>
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
