add adaptive for ipad

--- a/index.html
+++ b/index.html
@@ -31,18 +31,21 @@
     <header class="header">
       <div class="container">
         <div class="row">
-          <div class="col-xl-2">
+          <div class="col-xl-2 logo-bar">
             <div class="header-logo">WebDev</div>
+            <div class="menu-icon"><i class="fa fa-bars"></i></a></div>
           </div>
           <div class="col-xl-8 ml-auto align-self-center">
-            <nav>
+            <nav >
               <ul class="header-menu d-flex justify-content-end">
-                <li class="header-menu__item"><a href="#">Home</a></li>
-                <li class="header-menu__item"><a href="#">About</a></li>
-                <li class="header-menu__item"><a href="#">Servicing</a></li>
-                <li class="header-menu__item"><a href="#">Portfolio</a></li>
-                <li class="header-menu__item"><a href="#">Blog</a></li>
-                <li class="header-menu__item"><a href="#">Contact us</a></li>
+                <li class="header-menu__item">
+                  <a href="/"><i class="fa fa-home"></i></a>
+                </li>
+                <li class="header-menu__item"><a href="#about">About</a></li>
+                <li class="header-menu__item"><a href="#services">Servicing</a></li>
+                <li class="header-menu__item"><a href="#portfolio">Portfolio</a></li>
+                <li class="header-menu__item"><a href="#blog">Blog</a></li>
+                <li class="header-menu__item"><a href="#contact">Contact us</a></li>
                 <li class="header-menu__item"><i class="fa fa-search"></i></li>
               </ul>
             </nav>
@@ -50,6 +53,7 @@
         </div>
       </div>
     </header>
+    <div id="toTop"><i class="fa fa-chevron-up"></i></div>
     <section class="main">
       <div class="container">
         <div class="row">
@@ -63,7 +67,7 @@
       </div>
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
       <div class="container ">
         <div class="row justify-content-center">
           <div class="col-xl-8">
@@ -75,21 +79,21 @@
           </div>
         </div>
         <div class="row justify-content-around">
-          <div class="col-xl-3">
+          <div class="col-xl-3 col-md-6">
             <img src="/img/about1.png" alt="" />
             <h3 class="about_h3">Awesome Icons</h3>
             <p class="about__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             </p>
           </div>
-          <div class="col-xl-3">
+          <div class="col-xl-3 col-md-6">
             <img src="/img/about2.png" alt="" />
             <h3 class="about_h3">One Page</h3>
             <p class="about__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             </p>
           </div>
-          <div class="col-xl-3">
+          <div class="col-xl-3 col-md-6">
             <img src="/img/about3.png" alt="" />
             <h3 class="about_h3">Fully Responsive</h3>
             <p class="about__text">
@@ -99,7 +103,7 @@
         </div>
       </div>
     </section>
-    <section class="services">
+    <section class="services" id="services">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-xl-8">
@@ -111,7 +115,7 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-md-6">
             <div class="card">
               <i class="fa fa-briefcase card__icon"></i>
               <h3 class="about_h3">Portfolio</h3>
@@ -121,7 +125,7 @@
               <button class="card__btn">read more</button>
             </div>
           </div>
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-md-6">
             <div class="card">
               <i class="fa fa-refresh card__icon"></i>
               <h3 class="about_h3">Research</h3>
@@ -131,7 +135,7 @@
               <button class="card__btn">read more</button>
             </div>
           </div>
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-md-6">
             <div class="card">
               <i class="fa fa-support card__icon"></i>
               <h3 class="about_h3">Support</h3>
@@ -141,9 +145,9 @@
               <button class="card__btn">read more</button>
             </div>
           </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-xl-4">
+        <!-- </div> -->
+        <!-- <div class="row justify-content-center"> -->
+          <div class="col-xl-4 col-md-6">
             <div class="card">
               <i class="fa fa-product-hunt card__icon"></i>
               <h3 class="about_h3">Documentation</h3>
@@ -153,7 +157,7 @@
               <button class="card__btn">read more</button>
             </div>
           </div>
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-md-6">
             <div class="card">
               <i class="fa fa-connectdevelop card__icon"></i>
               <h3 class="about_h3">Development</h3>
@@ -163,7 +167,7 @@
               <button class="card__btn">read more</button>
             </div>
           </div>
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-md-6">
             <div class="card">
               <i class="fa fa-desktop card__icon"></i>
               <h3 class="about_h3">Design</h3>
@@ -173,11 +177,11 @@
               <button class="card__btn">read more</button>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
       </div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-xl-8">
@@ -193,42 +197,42 @@
           </div>
         </div>
         <div class="row filter">
-          <div filter="wd" class="col-xl-4">
+          <div filter="wd" class="col-xl-4 col-md-6">
             <img src="img/item1.png" alt="" />
             <div class="text">
               <h5>Hand Watch</h5>
               <p>Web design</p>
             </div>
           </div>
-          <div filter="moc" class="col-xl-4">
+          <div filter="moc" class="col-xl-4 col-md-6">
             <img src="img/item2.png" alt="" />
             <div class="text">
               <h5>One Day Pass</h5>
               <p>Mockups</p>
             </div>
           </div>
-          <div filter="wd" class="col-xl-4">
+          <div filter="wd" class="col-xl-4 col-md-6">
             <img src="img/item3.png" alt="" />
             <div class="text">
               <h5>Modal T-shirt</h5>
               <p>Web design</p>
             </div>
           </div>
-          <div filter="moc" class="col-xl-4">
+          <div filter="moc" class="col-xl-4 col-md-6">
             <img src="img/item4.png" alt="" />
             <div class="text">
               <h5>Flask</h5>
               <p>Mockups</p>
             </div>
           </div>
-          <div filter="ud" class="col-xl-4">
+          <div filter="ud" class="col-xl-4 col-md-6">
             <img src="img/item5.png" alt="" />
             <div class="text">
               <h5>Eplemost</h5>
               <p>Ui/Ux Design</p>
             </div>
           </div>
-          <div filter="ud" class="col-xl-4">
+          <div filter="ud" class="col-xl-4 col-md-6">
             <img src="img/item6.png" alt="" />
             <div class="text">
               <h5>The kitchens</h5>
@@ -256,7 +260,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-md-6">
             <div class="price">
               <div class="price__head">
                 <p>Free Trial</p>
@@ -276,7 +280,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-md-6">
             <div class="price">
               <div class="price__head">
                 <p>Basic</p>
@@ -296,7 +300,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-4">
+          <div class="col-xl-4 col-md-6">
             <div class="price">
               <div class="price__head">
                 <p>Ultimates</p>
@@ -489,7 +493,7 @@
         </div>
       </div>
     </section>
-    <section class="blog">
+    <section class="blog" id="blog">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-xl-8">
@@ -501,10 +505,10 @@
           </div>
         </div>
         <div class="row left">
-          <div class="col-xl-6">
-            <img src="img/blog1.png" alt="" />
+          <div class="col-xl-6 col-md-6">
+            <img src="img/blog1.png" class="img-fluid" alt="" />
           </div>
-          <div class="col-xl-6">
+          <div class="col-xl-6 col-md-6">
             <div class="blog__item">
               <a href="">SEO Quis Vestibulum</a>
               <div>
@@ -520,10 +524,10 @@
           </div>
         </div>
         <div class="row right">
-          <div class="col-xl-6">
-            <img src="img/blog2.png" alt="" />
+          <div class=" col-xl-6 col-md-6">
+            <img src="img/blog2.png" class="img-fluid" alt="" />
           </div>
-          <div class="col-xl-6">
+          <div class="col-xl-6 col-md-6">
             <div class="blog__item">
               <a href="">SEO Quis Vestibulum</a>
               <div>
@@ -539,10 +543,10 @@
           </div>
         </div>
         <div class="row left">
-          <div class="col-xl-6">
-            <img src="img/blog3.png" alt="" />
+          <div class="col-xl-6 col-md-6">
+            <img src="img/blog3.png" class="img-fluid" alt="" />
           </div>
-          <div class="col-xl-6">
+          <div class="col-xl-6 col-md-6">
             <div class="blog__item">
               <a href="">SEO Quis Vestibulum</a>
               <div>
@@ -565,7 +569,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <section class="footer" id="contact">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-xl-8">
@@ -609,14 +613,18 @@
           <div class="col-xl-2 offset-xl-7"><button>Send</button></div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-xl-12"><div class="footer__rules">All rights Reserved © 2020</div></div>
+    </section>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-xl-12"><div class="footer__rules">All rights Reserved © 2020</div></div>
+        </div>
       </div>
     </footer>
 
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
     <script
