--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
         </div>
         <div class="row justify-content-around">
           <div class="col-xl-3 col-md-6">
-            <img src="/img/about1.png" alt="" />
+            <img src="img/about1.png" alt="" />
             <h3 class="about_h3">Awesome Icons</h3>
             <p class="about__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             </p>
           </div>
           <div class="col-xl-3 col-md-6">
-            <img src="/img/about2.png" alt="" />
+            <img src="img/about2.png" alt="" />
             <h3 class="about_h3">One Page</h3>
             <p class="about__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             </p>
           </div>
           <div class="col-xl-3 col-md-6">
-            <img src="/img/about3.png" alt="" />
+            <img src="img/about3.png" alt="" />
             <h3 class="about_h3">Fully Responsive</h3>
             <p class="about__text">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
